--- a/src/views/receiptForm.ejs
+++ b/src/views/receiptForm.ejs
@@ -61,7 +61,7 @@
                                                 name="id_rif_asegurado"
                                                 id="id_rif_asegurado"
                                                 onkeyup="pasarAgentePropio();"
-                                                placeholder="Cédula/Rif *" 
+                                                placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                 required
