--- a/src/views/funeralPolicyForm.ejs
+++ b/src/views/funeralPolicyForm.ejs
@@ -55,8 +55,8 @@
                                                         name="id_rif_tomador"
                                                         id="id_rif_tomador"
                                                         onkeyup="pasarNombreTomador();"
-                                                        placeholder="Cédula/Rif *" 
-                                                        class="form-control number_format"
+                                                        placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
+                                                        class="form-control"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
@@ -71,8 +71,8 @@
                                                         name="id_rif_asegurado"
                                                         id="id_rif_asegurado"
                                                         onkeyup="pasarNombreAsegurado();"
-                                                        placeholder="Cédula/Rif *" 
-                                                        class="form-control number_format"
+                                                        placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
+                                                        class="form-control"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
@@ -147,32 +147,15 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_ramo_poliza">
-                                                        <option value="">Seleccione</option>
-                                                        <option value="TRI">TRI</option>
-                                                        <option value="RCG">RCG</option>
-                                                        <option value="FIDELIDAD DE EMPLEADOS">FIDELIDAD DE EMPLEADOS</option>
-                                                        <option value="INCENDIO">INCENDIO</option>
-                                                        <option value="RIESGOS DIVERSOS">RIESGOS DIVERSOS</option>
-                                                        <option value="COMBINADO EMPRESARIAL">COMBINADO EMPRESARIAL</option>
-                                                        <option value="COMBINADO RESIDENCIAL">COMBINADO RESIDENCIAL</option>
+                                                    <select class="form-control" name="tipo_canal_poliza" required>
+                                                        <option value="">Seleccione *</option>
+                                                        <option value="REDES SOCIALES">REDES SOCIALES</option>
+                                                        <option value="PÁGINA WEB">PÁGINA WEB</option>
+                                                        <option value="ÁREA BY ATINA">ÁREA BY ATINA</option>
+                                                        <option value="AGENTE PROPIO">AGENTE PROPIO</option>
                                                     </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tasa</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="text"
-                                                        name="tasa_poliza"
-                                                        id="tasa_poliza"
-                                                        placeholder="Tasa Póliza *" 
-                                                        class="form-control number_format"
-                                                        required
-                                                    >
                                                 </div>
                                             </div>
                                         </div>
@@ -284,19 +267,6 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
-                                                <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_canal_poliza" required>
-                                                        <option value="">Seleccione *</option>
-                                                        <option value="REDES SOCIALES">REDES SOCIALES</option>
-                                                        <option value="PÁGINA WEB">PÁGINA WEB</option>
-                                                        <option value="ÁREA BY ATINA">ÁREA BY ATINA</option>
-                                                        <option value="AGENTE PROPIO">AGENTE PROPIO</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </form>
@@ -385,7 +355,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <label class="col-sm-12 col-form-label">Nota: Para guardar varios beneficiarios escriba uno por uno el beneficiario en el formulario y haga click en el botón de Guardar, En el caso de que guarde el último beneficiario haga click en el botón siguiente</label>
+                                <label class="col-sm-12 col-form-label"><h3>Nota: Para guardar varios beneficiarios escriba uno por uno el beneficiario en el formulario y haga click en el botón de Guardar, En el caso de que guarde el último beneficiario haga click en el botón siguiente</h3></label>
                                 <div class="form-group row">
                                     <div class="col-sm-12 col-sm-offset-2">
                                         <div class="card-body d-flex">
@@ -405,13 +375,14 @@
                                                 <div class="table-responsive">
                                                     <table 
                                                         class="table table-striped table-bordered table-hover"
-                                                        id="tablaBeneficiarios" 
+                                                        id="tablaBeneficiariosFunerario" 
                                                     >
                                                     <thead>
                                                     <tr>
                                                         <th>Nombre</th>
                                                         <th>Apellido</th>
                                                         <th>Parentesco</th>
+                                                        <th>Deshabilitar</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -422,6 +393,7 @@
                                                         <th>Nombre</th>
                                                         <th>Apellido</th>
                                                         <th>Parentesco</th>
+                                                        <th>Deshabilitar</th>
                                                     </tr>
                                                     </tfoot>
                                                     </table>
