--- a/src/views/healthCollectiveForm.ejs
+++ b/src/views/healthCollectiveForm.ejs
@@ -55,8 +55,8 @@
                                                         name="id_rif_tomador"
                                                         id="id_rif_tomador"
                                                         onkeyup="pasarNombreTomador2();"
-                                                        placeholder="Cédula/Rif *" 
-                                                        class="form-control number_format"
+                                                        placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
+                                                        class="form-control"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
