--- a/src/views/healthPolicyForm.ejs
+++ b/src/views/healthPolicyForm.ejs
@@ -55,8 +55,8 @@
                                                         name="id_rif_tomador"
                                                         id="id_rif_tomador"
                                                         onkeyup="pasarNombreTomador();"
-                                                        placeholder="Cédula/Rif *" 
-                                                        class="form-control number_format"
+                                                        placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
+                                                        class="form-control"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
@@ -71,8 +71,8 @@
                                                         name="id_rif_asegurado"
                                                         id="id_rif_asegurado"
                                                         onkeyup="pasarNombreAsegurado();"
-                                                        placeholder="Cédula/Rif *" 
-                                                        class="form-control number_format"
+                                                        placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
+                                                        class="form-control"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
@@ -405,7 +405,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <label class="col-sm-12 col-form-label">Nota: Para guardar varios beneficiarios escriba uno por uno el beneficiario en el formulario y haga click en el botón de Guardar, En el caso de que guarde el último beneficiario haga click en el botón siguiente</label>
+                                <label class="col-sm-12 col-form-label"><h3>Nota: Para guardar varios beneficiarios escriba uno por uno el beneficiario en el formulario y haga click en el botón de Guardar, En el caso de que guarde el último beneficiario haga click en el botón siguiente</h3></label>
                                 <div class="form-group row">
                                     <div class="col-sm-12 col-sm-offset-2">
                                         <div class="card-body d-flex">
@@ -425,13 +425,14 @@
                                                 <div class="table-responsive">
                                                     <table 
                                                         class="table table-striped table-bordered table-hover"
-                                                        id="tablaBeneficiarios" 
+                                                        id="tablaBeneficiariosSalud" 
                                                     >
                                                     <thead>
                                                     <tr>
                                                         <th>Nombre</th>
                                                         <th>Apellido</th>
                                                         <th>Parentesco</th>
+                                                        <th>Deshabilitar</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -442,6 +443,7 @@
                                                         <th>Nombre</th>
                                                         <th>Apellido</th>
                                                         <th>Parentesco</th>
+                                                        <th>Deshabilitar</th>
                                                     </tr>
                                                     </tfoot>
                                                     </table>
