--- a/src/views/letterGuaranteeForm.ejs
+++ b/src/views/letterGuaranteeForm.ejs
@@ -60,7 +60,7 @@
                                                 name="id_rif_asegurado"
                                                 id="id_rif_asegurado"
                                                 onkeyup="pasarNombreAsegurado();"
-                                                placeholder="Cédula/Rif del Titular *" 
+                                                placeholder="Cédula/Rif del Titular (Cédula escribir con puntos de miles) *" 
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                 required
